lib/src/openal_generated_bindings.dart


  int alcSetThreadContext(
    ffi.Pointer<ALCcontext> context,
  ) {
    return _alcSetThreadContext(
      context,
    );
  }

  late final _alcSetThreadContextPtr =
      _lookup<ffi.NativeFunction<NativeAlcSetThreadContext>>(
          'alcSetThreadContext');
  late final _alcSetThreadContext =
      _alcSetThreadContextPtr.asFunction<DartAlcSetThreadContext>(isLeaf: true);

  ffi.Pointer<ALCcontext> alcGetThreadContext() {
    return _alcGetThreadContext();
  }

  late final _alcGetThreadContextPtr =
      _lookup<ffi.NativeFunction<NativeAlcGetThreadContext>>(
          'alcGetThreadContext');
  late final _alcGetThreadContext =
      _alcGetThreadContextPtr.asFunction<DartAlcGetThreadContext>(isLeaf: true);

  void alBufferSubDataSOFT(
    int buffer,
    int format,
    ffi.Pointer<ALvoid> data,
    int offset,
    int length,
  ) {
    return _alBufferSubDataSOFT(
      buffer,
      format,
      data,
      offset,
      length,
    );
  }

  late final _alBufferSubDataSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlBufferSubDataSOFT>>(
          'alBufferSubDataSOFT');
  late final _alBufferSubDataSOFT =
      _alBufferSubDataSOFTPtr.asFunction<DartAlBufferSubDataSOFT>(isLeaf: true);

  void alRequestFoldbackStart(
    int mode,
    int count,
    int length,
    ffi.Pointer<ALfloat> mem,
    LPALFOLDBACKCALLBACK callback,
  ) {
    return _alRequestFoldbackStart(
      mode,
      count,
      length,
      mem,
      callback,
    );
  }

  late final _alRequestFoldbackStartPtr =
      _lookup<ffi.NativeFunction<NativeAlRequestFoldbackStart>>(
          'alRequestFoldbackStart');
  late final _alRequestFoldbackStart = _alRequestFoldbackStartPtr
      .asFunction<DartAlRequestFoldbackStart>(isLeaf: true);

  void alRequestFoldbackStop() {
    return _alRequestFoldbackStop();
  }

  late final _alRequestFoldbackStopPtr =
      _lookup<ffi.NativeFunction<NativeAlRequestFoldbackStop>>(
          'alRequestFoldbackStop');
  late final _alRequestFoldbackStop = _alRequestFoldbackStopPtr
      .asFunction<DartAlRequestFoldbackStop>(isLeaf: true);

  void alBufferSamplesSOFT(
    int buffer,
    int samplerate,
    int internalformat,
    int samples,
    int channels,
    int type,
    ffi.Pointer<ALvoid> data,
  ) {
    return _alBufferSamplesSOFT(
      buffer,
      samplerate,
      internalformat,
      samples,
      channels,
      type,
      data,
    );
  }

  late final _alBufferSamplesSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlBufferSamplesSOFT>>(
          'alBufferSamplesSOFT');
  late final _alBufferSamplesSOFT =
      _alBufferSamplesSOFTPtr.asFunction<DartAlBufferSamplesSOFT>(isLeaf: true);

  void alBufferSubSamplesSOFT(
    int buffer,
    int offset,
    int samples,
    int channels,
    int type,
    ffi.Pointer<ALvoid> data,
  ) {
    return _alBufferSubSamplesSOFT(
      buffer,
      offset,
      samples,
      channels,
      type,
      data,
    );
  }

  late final _alBufferSubSamplesSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlBufferSubSamplesSOFT>>(
          'alBufferSubSamplesSOFT');
  late final _alBufferSubSamplesSOFT = _alBufferSubSamplesSOFTPtr
      .asFunction<DartAlBufferSubSamplesSOFT>(isLeaf: true);

  void alGetBufferSamplesSOFT(
    int buffer,
    int offset,
    int samples,
    int channels,
    int type,
    ffi.Pointer<ALvoid> data,
  ) {
    return _alGetBufferSamplesSOFT(
      buffer,
      offset,
      samples,
      channels,
      type,
      data,
    );
  }

  late final _alGetBufferSamplesSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetBufferSamplesSOFT>>(
          'alGetBufferSamplesSOFT');
  late final _alGetBufferSamplesSOFT = _alGetBufferSamplesSOFTPtr
      .asFunction<DartAlGetBufferSamplesSOFT>(isLeaf: true);

  int alIsBufferFormatSupportedSOFT(
    int format,
  ) {
    return _alIsBufferFormatSupportedSOFT(
      format,
    );
  }

  late final _alIsBufferFormatSupportedSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlIsBufferFormatSupportedSOFT>>(
          'alIsBufferFormatSupportedSOFT');
  late final _alIsBufferFormatSupportedSOFT = _alIsBufferFormatSupportedSOFTPtr
      .asFunction<DartAlIsBufferFormatSupportedSOFT>(isLeaf: true);

  ffi.Pointer<ALCdevice> alcLoopbackOpenDeviceSOFT(
    ffi.Pointer<ALCchar> deviceName,
  ) {
    return _alcLoopbackOpenDeviceSOFT(
      deviceName,
    );
  }

  late final _alcLoopbackOpenDeviceSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcLoopbackOpenDeviceSOFT>>(
          'alcLoopbackOpenDeviceSOFT');
  late final _alcLoopbackOpenDeviceSOFT = _alcLoopbackOpenDeviceSOFTPtr
      .asFunction<DartAlcLoopbackOpenDeviceSOFT>(isLeaf: true);

  int alcIsRenderFormatSupportedSOFT(
    ffi.Pointer<ALCdevice> device,
    int freq,
    int channels,
    int type,
  ) {
    return _alcIsRenderFormatSupportedSOFT(
      device,
      freq,
      channels,
      type,
    );
  }

  late final _alcIsRenderFormatSupportedSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcIsRenderFormatSupportedSOFT>>(
          'alcIsRenderFormatSupportedSOFT');
  late final _alcIsRenderFormatSupportedSOFT =
      _alcIsRenderFormatSupportedSOFTPtr
          .asFunction<DartAlcIsRenderFormatSupportedSOFT>(isLeaf: true);

  void alcRenderSamplesSOFT(
    ffi.Pointer<ALCdevice> device,
    ffi.Pointer<ALCvoid> buffer,
    int samples,
  ) {
    return _alcRenderSamplesSOFT(
      device,
      buffer,
      samples,
    );
  }

  late final _alcRenderSamplesSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcRenderSamplesSOFT>>(
          'alcRenderSamplesSOFT');
  late final _alcRenderSamplesSOFT = _alcRenderSamplesSOFTPtr
      .asFunction<DartAlcRenderSamplesSOFT>(isLeaf: true);

  void alSourcedSOFT(
    int source,
    int param,
    double value,
  ) {
    return _alSourcedSOFT(
      source,
      param,
      value,
    );
  }

  late final _alSourcedSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSourcedSOFT>>('alSourcedSOFT');
  late final _alSourcedSOFT =
      _alSourcedSOFTPtr.asFunction<DartAlSourcedSOFT>(isLeaf: true);

  void alSource3dSOFT(
    int source,
    int param,
    double value1,
    double value2,
    double value3,
  ) {
    return _alSource3dSOFT(
      source,
      param,
      value1,
      value2,
      value3,
    );
  }

  late final _alSource3dSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSource3dSOFT>>('alSource3dSOFT');
  late final _alSource3dSOFT =
      _alSource3dSOFTPtr.asFunction<DartAlSource3dSOFT>(isLeaf: true);

  void alSourcedvSOFT(
    int source,
    int param,
    ffi.Pointer<ALdouble> values,
  ) {
    return _alSourcedvSOFT(
      source,
      param,
      values,
    );
  }

  late final _alSourcedvSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSourcedvSOFT>>('alSourcedvSOFT');
  late final _alSourcedvSOFT =
      _alSourcedvSOFTPtr.asFunction<DartAlSourcedvSOFT>(isLeaf: true);

  void alGetSourcedSOFT(
    int source,
    int param,
    ffi.Pointer<ALdouble> value,
  ) {
    return _alGetSourcedSOFT(
      source,
      param,
      value,
    );
  }

  late final _alGetSourcedSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetSourcedSOFT>>('alGetSourcedSOFT');
  late final _alGetSourcedSOFT =
      _alGetSourcedSOFTPtr.asFunction<DartAlGetSourcedSOFT>(isLeaf: true);

  void alGetSource3dSOFT(
    int source,
    int param,
    ffi.Pointer<ALdouble> value1,
    ffi.Pointer<ALdouble> value2,
    ffi.Pointer<ALdouble> value3,
  ) {
    return _alGetSource3dSOFT(
      source,
      param,
      value1,
      value2,
      value3,
    );
  }

  late final _alGetSource3dSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetSource3dSOFT>>('alGetSource3dSOFT');
  late final _alGetSource3dSOFT =
      _alGetSource3dSOFTPtr.asFunction<DartAlGetSource3dSOFT>(isLeaf: true);

  void alGetSourcedvSOFT(
    int source,
    int param,
    ffi.Pointer<ALdouble> values,
  ) {
    return _alGetSourcedvSOFT(
      source,
      param,
      values,
    );
  }

  late final _alGetSourcedvSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetSourcedvSOFT>>('alGetSourcedvSOFT');
  late final _alGetSourcedvSOFT =
      _alGetSourcedvSOFTPtr.asFunction<DartAlGetSourcedvSOFT>(isLeaf: true);

  void alSourcei64SOFT(
    int source,
    int param,
    int value,
  ) {
    return _alSourcei64SOFT(
      source,
      param,
      value,
    );
  }

  late final _alSourcei64SOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSourcei64SOFT>>('alSourcei64SOFT');
  late final _alSourcei64SOFT =
      _alSourcei64SOFTPtr.asFunction<DartAlSourcei64SOFT>(isLeaf: true);

  void alSource3i64SOFT(
    int source,
    int param,
    int value1,
    int value2,
    int value3,
  ) {
    return _alSource3i64SOFT(
      source,
      param,
      value1,
      value2,
      value3,
    );
  }

  late final _alSource3i64SOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSource3i64SOFT>>('alSource3i64SOFT');
  late final _alSource3i64SOFT =
      _alSource3i64SOFTPtr.asFunction<DartAlSource3i64SOFT>(isLeaf: true);

  void alSourcei64vSOFT(
    int source,
    int param,
    ffi.Pointer<ALint64SOFT> values,
  ) {
    return _alSourcei64vSOFT(
      source,
      param,
      values,
    );
  }

  late final _alSourcei64vSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlSourcei64vSOFT>>('alSourcei64vSOFT');
  late final _alSourcei64vSOFT =
      _alSourcei64vSOFTPtr.asFunction<DartAlSourcei64vSOFT>(isLeaf: true);

  void alGetSourcei64SOFT(
    int source,
    int param,
    ffi.Pointer<ALint64SOFT> value,
  ) {
    return _alGetSourcei64SOFT(
      source,
      param,
      value,
    );
  }

  late final _alGetSourcei64SOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetSourcei64SOFT>>(
          'alGetSourcei64SOFT');
  late final _alGetSourcei64SOFT =
      _alGetSourcei64SOFTPtr.asFunction<DartAlGetSourcei64SOFT>(isLeaf: true);

  void alGetSource3i64SOFT(
    int source,
    int param,
    ffi.Pointer<ALint64SOFT> value1,
    ffi.Pointer<ALint64SOFT> value2,
    ffi.Pointer<ALint64SOFT> value3,
  ) {
    return _alGetSource3i64SOFT(
      source,
      param,
      value1,
      value2,
      value3,
    );
  }

  late final _alGetSource3i64SOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetSource3i64SOFT>>(
          'alGetSource3i64SOFT');
  late final _alGetSource3i64SOFT =
      _alGetSource3i64SOFTPtr.asFunction<DartAlGetSource3i64SOFT>(isLeaf: true);

  void alGetSourcei64vSOFT(
    int source,
    int param,
    ffi.Pointer<ALint64SOFT> values,
  ) {
    return _alGetSourcei64vSOFT(
      source,
      param,
      values,
    );
  }

  late final _alGetSourcei64vSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlGetSourcei64vSOFT>>(
          'alGetSourcei64vSOFT');
  late final _alGetSourcei64vSOFT =
      _alGetSourcei64vSOFTPtr.asFunction<DartAlGetSourcei64vSOFT>(isLeaf: true);

  void alDeferUpdatesSOFT() {
    return _alDeferUpdatesSOFT();
  }

  late final _alDeferUpdatesSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlDeferUpdatesSOFT>>(
          'alDeferUpdatesSOFT');
  late final _alDeferUpdatesSOFT =
      _alDeferUpdatesSOFTPtr.asFunction<DartAlDeferUpdatesSOFT>(isLeaf: true);

  void alProcessUpdatesSOFT() {
    return _alProcessUpdatesSOFT();
  }

  late final _alProcessUpdatesSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlProcessUpdatesSOFT>>(
          'alProcessUpdatesSOFT');
  late final _alProcessUpdatesSOFT = _alProcessUpdatesSOFTPtr
      .asFunction<DartAlProcessUpdatesSOFT>(isLeaf: true);

  void alcDevicePauseSOFT(
    ffi.Pointer<ALCdevice> device,
  ) {
    return _alcDevicePauseSOFT(
      device,
    );
  }

  late final _alcDevicePauseSOFTPtr =
      _lookup<ffi.NativeFunction<NativeAlcDevicePauseSOFT>>(
          'alcDevicePauseSOFT');
  late final _alcDevicePauseSOFT =
      _alcDevicePauseSOFTPtr.asFunction<DartAlcDevicePauseSOFT>(isLeaf: true);
